src/objects/OrgMaster__c.object
<CustomObject>
    <description>Map to store Vendor Id of Supplier Metrics and Org master ID(External ID) of Supplier Accounts</description>
    <fields>
        <fullName>Org_Bus_ID__c</fullName>
        <label>Org_Bus_ID</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Name_Primary_Org__c</fullName>
        <label>Supplier Name(Primary Org)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Code__c</fullName>
        <externalId>true</externalId>
        <label>Vendor Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>OrgMaster</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Org_Bus_ID__c</columns>
        <columns>Supplier_Name_Primary_Org__c</columns>
        <columns>Vendor_Code__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SMORG-{000}</displayFormat>
        <label>SMI Org Master Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OrgMaster</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>